--- a/Tests/Fixtures/StencilContexts/Yaml/documents.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/documents.yaml
@@ -1,19 +1,19 @@
 files:
 - documents:
   - data:
-    - Mark McGwire
-    - Sammy Sosa
-    - Ken Griffey
+    - "Mark McGwire"
+    - "Sammy Sosa"
+    - "Ken Griffey"
     metadata:
       element:
-        type: String
-      type: Array
+        type: "String"
+      type: "Array"
   - data:
-    - Chicago Cubs
-    - St Louis Cardinals
+    - "Chicago Cubs"
+    - "St Louis Cardinals"
     metadata:
       element:
-        type: String
-      type: Array
-  name: documents
-  path: documents.yaml
+        type: "String"
+      type: "Array"
+  name: "documents"
+  path: "documents.yaml"
