--- a/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/mapping.yaml
@@ -1,18 +1,18 @@
 files:
 - documents:
   - data:
-      key1: value1
+      key1: "value1"
       key2:
-        nestedKey2: nestedValue2
+        nestedKey2: "nestedValue2"
     metadata:
       properties:
-      - name: key1
-        type: String
-      - name: key2
+      - name: "key1"
+        type: "String"
+      - name: "key2"
         properties:
-        - name: nestedKey2
-          type: String
-        type: Dictionary
-      type: Dictionary
-  name: mapping
-  path: mapping.yaml
+        - name: "nestedKey2"
+          type: "String"
+        type: "Dictionary"
+      type: "Dictionary"
+  name: "mapping"
+  path: "mapping.yaml"
