--- a/Tests/Fixtures/StencilContexts/Yaml/scalar.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/scalar.yaml
@@ -1,7 +1,7 @@
 files:
 - documents:
-  - data: value1
+  - data: "value1"
     metadata:
-      type: String
-  name: scalar
-  path: scalar.yaml
+      type: "String"
+  name: "scalar"
+  path: "scalar.yaml"
