Move params into a config entry output, to be able to specify different parameters per output

--- a/Tests/Fixtures/Configs/config-with-multi-outputs.yml
+++ b/Tests/Fixtures/Configs/config-with-multi-outputs.yml
@@ -5,5 +5,7 @@ ib:
   outputs:
     - templateName: scenes-swift4
       output: ib-scenes.swift
+      params:
+        enumName: "Scenes"
     - templateName: segues-swift4
       output: ib-segues.swift
