Rename `paths` to `inputs` and refactor away the valueOrArray code

--- a/Tests/Fixtures/Configs/config-both-templates.yml
+++ b/Tests/Fixtures/Configs/config-both-templates.yml
@@ -1,5 +1,6 @@
 strings:
-  paths: input.strings
-  templatePath: template.swift
-  templateName: template
-  output: out.swift
+  inputs: input.strings
+  outputs:
+    templatePath: template.swift
+    templateName: template
+    output: out.swift
