--- a/Tests/Fixtures/Configs/config-invalid-output.yml
+++ b/Tests/Fixtures/Configs/config-invalid-output.yml
@@ -1,6 +1,7 @@
 strings:
-  paths: input.strings
-  templateName: template
-  output:
-    - bad
-    - entry
+  inputs: input.strings
+  outputs:
+    templateName: template
+    output:
+      - bad
+      - entry
