--- a/Tests/Fixtures/Configs/config-invalid-structure.yml
+++ b/Tests/Fixtures/Configs/config-invalid-structure.yml
@@ -1,8 +1,9 @@
 strings:
-  paths:
+  inputs:
     - one
     - two: three
-  templateName: template
-  output:
-    - bad
-    - entry
+  outputs:
+    templateName: template
+    output:
+      - bad
+      - entry
