--- a/Tests/Fixtures/Configs/config-missing-template.yml
+++ b/Tests/Fixtures/Configs/config-missing-template.yml
@@ -1,4 +1,5 @@
 strings:
-  paths: input.strings
-  template: wrongKey
-  output: out.swift
+  inputs: input.strings
+  outputs:
+    template: wrongKey
+    output: out.swift
