--- a/Tests/Fixtures/StencilContexts/Yaml/json.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/json.yaml
@@ -10,17 +10,17 @@ files:
         - "3"
     metadata:
       properties:
-      - name: "key1"
-        type: "String"
-      - name: "key2"
-        type: "String"
-      - name: "key3"
-        properties:
-        - element:
-            type: "String"
-          name: "nestedKey3"
-          type: "Array"
-        type: "Dictionary"
+        key1:
+          type: "String"
+        key2:
+          type: "String"
+        key3:
+          properties:
+            nestedKey3:
+              element:
+                type: "String"
+              type: "Array"
+          type: "Dictionary"
       type: "Dictionary"
   name: "json"
   path: "json.json"
