[WIP] Get SwiftLint flag to work

--- a/Tests/Fixtures/StencilContexts/IB-iOS/all.yaml
+++ b/Tests/Fixtures/StencilContexts/IB-iOS/all.yaml
@@ -6,6 +6,7 @@ modules:
 - SlackTextViewController
 - UIKit
 platform: iOS
+preferSwiftLintDisableAll: 
 storyboards:
 - initialScene:
     customClass: LocationPickerViewController
