--- a/Tests/Fixtures/StencilContexts/IB-macOS/all.yaml
+++ b/Tests/Fixtures/StencilContexts/IB-macOS/all.yaml
@@ -3,6 +3,7 @@ modules:
 - FadeSegue
 - PrefsWindowController
 platform: macOS
+preferSwiftLintDisableAll: 
 storyboards:
 - name: AdditionalImport
   platform: macOS
