--- a/Tests/Fixtures/StencilContexts/XCAssets/images.yaml
+++ b/Tests/Fixtures/StencilContexts/XCAssets/images.yaml
@@ -1,9 +1,11 @@
 catalogs:
 - assets:
-  - items: []
+  - isNamespaced: "false"
+    items: []
     name: "Empty"
     type: "group"
-  - items:
+  - isNamespaced: "true"
+    items:
     - name: "Banana"
       type: "image"
       value: "Exotic/Banana"
@@ -12,15 +14,18 @@ catalogs:
       value: "Exotic/Mango"
     name: "Exotic"
     type: "group"
-  - items:
+  - isNamespaced: "true"
+    items:
     - name: "Apricot"
       type: "image"
       value: "Round/Apricot"
-    - items:
+    - isNamespaced: "false"
+      items:
       - name: "Apple"
         type: "image"
         value: "Round/Apple"
-      - items:
+      - isNamespaced: "true"
+        items:
         - name: "Cherry"
           type: "image"
           value: "Round/Double/Cherry"
