--- a/Tests/Fixtures/StencilContexts/XCAssets/all.yaml
+++ b/Tests/Fixtures/StencilContexts/XCAssets/all.yaml
@@ -1,62 +1,62 @@
 catalogs:
 - assets:
   - items:
-    - name: Background
-      type: color
-      value: 24Vision/Background
-    - name: Primary
-      type: color
-      value: 24Vision/Primary
-    name: 24Vision
-    type: group
-  - name: Orange
-    type: image
-    value: Orange
+    - name: "Background"
+      type: "color"
+      value: "24Vision/Background"
+    - name: "Primary"
+      type: "color"
+      value: "24Vision/Primary"
+    name: "24Vision"
+    type: "group"
+  - name: "Orange"
+    type: "image"
+    value: "Orange"
   - items:
-    - name: Primary
-      type: color
-      value: Vengo/Primary
-    - name: Tint
-      type: color
-      value: Vengo/Tint
-    name: Vengo
-    type: group
-  name: Colors
+    - name: "Primary"
+      type: "color"
+      value: "Vengo/Primary"
+    - name: "Tint"
+      type: "color"
+      value: "Vengo/Tint"
+    name: "Vengo"
+    type: "group"
+  name: "Colors"
 - assets:
   - items: []
-    name: Empty
-    type: group
+    name: "Empty"
+    type: "group"
   - items:
-    - name: Banana
-      type: image
-      value: Exotic/Banana
-    - name: Mango
-      type: image
-      value: Exotic/Mango
-    name: Exotic
-    type: group
+    - name: "Banana"
+      type: "image"
+      value: "Exotic/Banana"
+    - name: "Mango"
+      type: "image"
+      value: "Exotic/Mango"
+    name: "Exotic"
+    type: "group"
   - items:
-    - name: Apricot
-      type: image
-      value: Round/Apricot
+    - name: "Apricot"
+      type: "image"
+      value: "Round/Apricot"
     - items:
-      - name: Apple
-        type: image
-        value: Round/Apple
+      - name: "Apple"
+        type: "image"
+        value: "Round/Apple"
       - items:
-        - name: Cherry
-          type: image
-          value: Round/Double/Cherry
-        name: Double
-        type: group
-      - name: Tomato
-        type: image
-        value: Round/Tomato
-      name: Red
-      type: group
-    name: Round
-    type: group
-  - name: private
-    type: image
-    value: private
-  name: Images
+        - name: "Cherry"
+          type: "image"
+          value: "Round/Double/Cherry"
+        name: "Double"
+        type: "group"
+      - name: "Tomato"
+        type: "image"
+        value: "Round/Tomato"
+      name: "Red"
+      type: "group"
+    name: "Round"
+    type: "group"
+  - name: "private"
+    type: "image"
+    value: "private"
+  name: "Images"
