--- a/Tests/Fixtures/StencilContexts/Colors/extra.yaml
+++ b/Tests/Fixtures/StencilContexts/Colors/extra.yaml
@@ -1,38 +1,38 @@
 palettes:
 - colors:
-  - alpha: ff
+  - alpha: "ff"
     blue: "66"
     green: "96"
-    name: ArticleBody
+    name: "ArticleBody"
     red: "33"
-  - alpha: ff
-    blue: cc
+  - alpha: "ff"
+    blue: "cc"
     green: "66"
-    name: ArticleFootnote
-    red: ff
-  - alpha: ff
+    name: "ArticleFootnote"
+    red: "ff"
+  - alpha: "ff"
     blue: "66"
-    green: fe
-    name: ArticleTitle
+    green: "fe"
+    name: "ArticleTitle"
     red: "33"
-  - alpha: ff
-    blue: cc
+  - alpha: "ff"
+    blue: "cc"
     green: "66"
-    name: Cyan-Color
-    red: ff
-  - alpha: cc
-    blue: ff
-    green: ff
-    name: NamedValue
-    red: ff
-  - alpha: cc
-    blue: ff
-    green: ff
-    name: NestedNamedValue
-    red: ff
-  - alpha: cc
-    blue: ff
-    green: ff
-    name: private
-    red: ff
-  name: extra
+    name: "Cyan-Color"
+    red: "ff"
+  - alpha: "cc"
+    blue: "ff"
+    green: "ff"
+    name: "NamedValue"
+    red: "ff"
+  - alpha: "cc"
+    blue: "ff"
+    green: "ff"
+    name: "NestedNamedValue"
+    red: "ff"
+  - alpha: "cc"
+    blue: "ff"
+    green: "ff"
+    name: "private"
+    red: "ff"
+  name: "extra"
