--- a/Tests/Fixtures/StencilContexts/IB-iOS/messages.yaml
+++ b/Tests/Fixtures/StencilContexts/IB-iOS/messages.yaml
@@ -1,50 +1,50 @@
 modules:
-- UIKit
-platform: iOS
+- "UIKit"
+platform: "iOS"
 storyboards:
 - initialScene:
-    baseType: ViewController
+    baseType: "ViewController"
     identifier: ""
-    module: UIKit
-    type: UIViewController
-  name: Message
-  platform: iOS
+    module: "UIKit"
+    type: "UIViewController"
+  name: "Message"
+  platform: "iOS"
   scenes:
-  - baseType: ViewController
-    identifier: Composer
-    module: UIKit
-    type: UIViewController
-  - baseType: TableViewController
-    identifier: MessagesList
-    module: UIKit
-    type: UITableViewController
-  - baseType: NavigationController
-    identifier: NavCtrl
-    module: UIKit
-    type: UINavigationController
-  - customClass: XXPickerViewController
+  - baseType: "ViewController"
+    identifier: "Composer"
+    module: "UIKit"
+    type: "UIViewController"
+  - baseType: "TableViewController"
+    identifier: "MessagesList"
+    module: "UIKit"
+    type: "UITableViewController"
+  - baseType: "NavigationController"
+    identifier: "NavCtrl"
+    module: "UIKit"
+    type: "UINavigationController"
+  - customClass: "XXPickerViewController"
     customModule: ""
-    identifier: URLChooser
+    identifier: "URLChooser"
     module: ""
-    type: XXPickerViewController
+    type: "XXPickerViewController"
   segues:
-  - customClass: CustomSegueClass2
+  - customClass: "CustomSegueClass2"
     customModule: ""
-    identifier: CustomBack
+    identifier: "CustomBack"
     module: ""
-    type: CustomSegueClass2
+    type: "CustomSegueClass2"
   - customClass: ""
     customModule: ""
-    identifier: Embed
-    module: UIKit
-    type: UIStoryboardSegue
+    identifier: "Embed"
+    module: "UIKit"
+    type: "UIStoryboardSegue"
   - customClass: ""
     customModule: ""
-    identifier: NonCustom
-    module: UIKit
-    type: UIStoryboardSegue
-  - customClass: CustomSegueClass
+    identifier: "NonCustom"
+    module: "UIKit"
+    type: "UIStoryboardSegue"
+  - customClass: "CustomSegueClass"
     customModule: ""
-    identifier: Show-NavCtrl
+    identifier: "Show-NavCtrl"
     module: ""
-    type: CustomSegueClass
+    type: "CustomSegueClass"
