--- a/Tests/Fixtures/StencilContexts/Strings/localizable.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/localizable.yaml
@@ -1,21 +1,21 @@
 tables:
 - levels:
     children:
-    - name: apples
+    - name: "apples"
       strings:
-      - key: apples.count
-        name: count
-        translation: You have %d apples
+      - key: "apples.count"
+        name: "count"
+        translation: "You have %d apples"
         types:
-        - Int
-    - name: bananas
+        - "Int"
+    - name: "bananas"
       strings:
-      - key: bananas.owner
-        name: owner
-        translation: Those %d bananas belong to %@.
+      - key: "bananas.owner"
+        name: "owner"
+        translation: "Those %d bananas belong to %@."
         types:
-        - Int
-        - String
+        - "Int"
+        - "String"
     - children:
       - children:
         - children:
@@ -27,57 +27,57 @@ tables:
                     - children:
                       - children:
                         - children:
-                          - name: is
+                          - name: "is"
                             strings:
-                            - key: settings.navigation-bar.title.deeper.than.we.can.handle.no.really.this.is.deep
-                              name: deep
-                              translation: DeepSettings
-                          name: this
-                        name: really
+                            - key: "settings.navigation-bar.title.deeper.than.we.can.handle.no.really.this.is.deep"
+                              name: "deep"
+                              translation: "DeepSettings"
+                          name: "this"
+                        name: "really"
                       name: "no"
-                    name: handle
-                  name: can
-                name: we
-              name: than
-            name: deeper
-          - name: even
+                    name: "handle"
+                  name: "can"
+                name: "we"
+              name: "than"
+            name: "deeper"
+          - name: "even"
             strings:
-            - key: settings.navigation-bar.title.even.deeper
-              name: deeper
-              translation: Settings
-          name: title
-        name: navigation-bar
+            - key: "settings.navigation-bar.title.even.deeper"
+              name: "deeper"
+              translation: "Settings"
+          name: "title"
+        name: "navigation-bar"
         strings:
-        - key: settings.navigation-bar.self
-          name: self
-          translation: Some Reserved Keyword there
-      - name: user_profile_section
+        - key: "settings.navigation-bar.self"
+          name: "self"
+          translation: "Some Reserved Keyword there"
+      - name: "user_profile_section"
         strings:
-        - key: settings.user_profile_section.footer_text
-          name: footer_text
-          translation: Here you can change some user profile settings.
-        - key: settings.user_profile_section.HEADER_TITLE
-          name: HEADER_TITLE
-          translation: User Profile Settings
-      name: settings
+        - key: "settings.user_profile_section.footer_text"
+          name: "footer_text"
+          translation: "Here you can change some user profile settings."
+        - key: "settings.user_profile_section.HEADER_TITLE"
+          name: "HEADER_TITLE"
+          translation: "User Profile Settings"
+      name: "settings"
     strings:
-    - key: alert_message
-      name: alert_message
-      translation: Some alert body there
-    - key: alert_title
-      name: alert_title
-      translation: Title of the alert
-    - key: ObjectOwnership
-      name: ObjectOwnership
-      translation: These are %3$@'s %1$d %2$@.
+    - key: "alert_message"
+      name: "alert_message"
+      translation: "Some alert body there"
+    - key: "alert_title"
+      name: "alert_title"
+      translation: "Title of the alert"
+    - key: "ObjectOwnership"
+      name: "ObjectOwnership"
+      translation: "These are %3$@'s %1$d %2$@."
       types:
-      - Int
-      - String
-      - String
-    - key: private
-      name: private
-      translation: Hello, my name is %@ and I'm %d
+      - "Int"
+      - "String"
+      - "String"
+    - key: "private"
+      name: "private"
+      translation: "Hello, my name is %@ and I'm %d"
       types:
-      - String
-      - Int
-  name: Localizable
+      - "String"
+      - "Int"
+  name: "Localizable"
