--- a/Tests/Fixtures/StencilContexts/Strings/structuredonly.yaml
+++ b/Tests/Fixtures/StencilContexts/Strings/structuredonly.yaml
@@ -4,30 +4,30 @@ tables:
     - children:
       - children:
         - children:
-          - name: even
+          - name: "even"
             strings:
-            - key: settings.navigation-bar.title.even.deeper
-              name: deeper
-              translation: Settings
-          name: title
-        name: navigation-bar
+            - key: "settings.navigation-bar.title.even.deeper"
+              name: "deeper"
+              translation: "Settings"
+          name: "title"
+        name: "navigation-bar"
         strings:
-        - key: settings.navigation-bar.self
-          name: self
-          translation: Some Reserved Keyword there
-      - name: user_profile_section
+        - key: "settings.navigation-bar.self"
+          name: "self"
+          translation: "Some Reserved Keyword there"
+      - name: "user_profile_section"
         strings:
-        - key: settings.user_profile_section.footer_text
-          name: footer_text
-          translation: Here you can change some user profile settings.
-        - key: settings.user_profile_section.HEADER_TITLE
-          name: HEADER_TITLE
-          translation: User Profile Settings
-        - key: settings.user_profile_section.points
-          name: points
-          translation: Welcome %@! You have %d points on your account.
+        - key: "settings.user_profile_section.footer_text"
+          name: "footer_text"
+          translation: "Here you can change some user profile settings."
+        - key: "settings.user_profile_section.HEADER_TITLE"
+          name: "HEADER_TITLE"
+          translation: "User Profile Settings"
+        - key: "settings.user_profile_section.points"
+          name: "points"
+          translation: "Welcome %@! You have %d points on your account."
           types:
-          - String
-          - Int
-      name: settings
-  name: LocStructuredOnly
+          - "String"
+          - "Int"
+      name: "settings"
+  name: "LocStructuredOnly"
