--- a/Tests/Fixtures/StencilContexts/Yaml/all.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/all.yaml
@@ -36,6 +36,7 @@ files:
         - "1"
         - "2"
         - "3"
+      key4: null
     metadata:
       properties:
         key1:
@@ -49,23 +50,34 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        key4:
+          type: "Optional"
       type: "Dictionary"
   name: "json"
   path: "json.json"
 - documents:
   - data:
       key1: "value1"
-      key2:
+      key2: 1e+0
+      key3:
+        nestedKey1: "nestedValue1"
         nestedKey2: "nestedValue2"
+      key4: null
     metadata:
       properties:
         key1:
           type: "String"
         key2:
+          type: "Double"
+        key3:
           properties:
+            nestedKey1:
+              type: "String"
             nestedKey2:
               type: "String"
           type: "Dictionary"
+        key4:
+          type: "Optional"
       type: "Dictionary"
   name: "mapping"
   path: "mapping.yaml"
