--- a/Tests/Fixtures/StencilContexts/Yaml/json.yaml
+++ b/Tests/Fixtures/StencilContexts/Yaml/json.yaml
@@ -8,6 +8,7 @@ files:
         - "1"
         - "2"
         - "3"
+      key4: null
     metadata:
       properties:
         key1:
@@ -21,6 +22,8 @@ files:
                 type: "String"
               type: "Array"
           type: "Dictionary"
+        key4:
+          type: "Optional"
       type: "Dictionary"
   name: "json"
   path: "json.json"
